set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

file(GLOB_RECURSE CERO_SRC CONFIGURE_DEPENDS "*.cpp")
list(FILTER CERO_SRC EXCLUDE REGEX ".+\\..+\\.cpp")

if (WIN32)
    file(GLOB_RECURSE CERO_WINDOWS_SRC CONFIGURE_DEPENDS "*.win.cpp")
    list(APPEND CERO_SRC ${CERO_WINDOWS_SRC})
elseif (UNIX)
    file(GLOB_RECURSE CERO_UNIX_SRC CONFIGURE_DEPENDS "*.unix.cpp")
    list(APPEND CERO_SRC ${CERO_UNIX_SRC})
endif ()

add_library(Cero ${CERO_SRC})

target_include_directories(Cero PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})

set_target_properties(Cero PROPERTIES
        PRECOMPILE_HEADERS PrecompiledHeader.hpp)
